Expand content on Multi Factor Authentication
Added definitions for Multi Factor Authentication and its categories.

--- a/#998.md
+++ b/#998.md
@@ -12,6 +12,14 @@ En la primera clase seguridad de datos se explicó el triángulo CIA, que contie
   <img src="Templates/SEG1.jpeg" width="550" alt="Mi imagen">
 </p>
 
+Luego, tenemos otro triángulo que podemos llamarlo "Triángulo de la funcionalidad", esto quiere decir que su objetivo es equilibrar esos tres aspectos al desarrollar un software, sistema o producto tecnológico, etc. Es muy importante porque existen muchos ejemplos en el que muchos creadores se inclinan más de un lado o lados, perdiendo o disminuyendo un aspecto que es de mucha utilidad.
+
+Teniendo en cuenta ambos triángulos, continuamos con las siguientes definiciones:
+- Multi Factor Authentication (MFA): Es un método de seguridad que requiere que un usuario proporcione dos o más pruebas distintas (factores) para verificar su identidad antes de concederle acceso a una cuenta o sistema. Estos factores se dividen en tres categorías principales: 
+Algo que sabes: Como una contraseña o un PIN.
+Algo que tienes: Como un teléfono móvil, un token de seguridad o una tarjeta inteligente.
+Algo que eres: Información biométrica, como una huella digital o un escaneo facial.
+
 
 
 
