Fix formatting of Multi Factor Authentication definitions

--- a/#998.md
+++ b/#998.md
@@ -16,9 +16,9 @@ Luego, tenemos otro triángulo que podemos llamarlo "Triángulo de la funcionali
 
 Teniendo en cuenta ambos triángulos, continuamos con las siguientes definiciones:
 - Multi Factor Authentication (MFA): Es un método de seguridad que requiere que un usuario proporcione dos o más pruebas distintas (factores) para verificar su identidad antes de concederle acceso a una cuenta o sistema. Estos factores se dividen en tres categorías principales: 
-Algo que sabes: Como una contraseña o un PIN.
-Algo que tienes: Como un teléfono móvil, un token de seguridad o una tarjeta inteligente.
-Algo que eres: Información biométrica, como una huella digital o un escaneo facial.
+  - Algo que sabes: Como una contraseña o un PIN.
+  - Algo que tienes: Como un teléfono móvil, un token de seguridad o una tarjeta inteligente.
+  - Algo que eres: Información biométrica, como una huella digital o un escaneo facial.
 
 
 
