Expand security concepts with data phases
Added definitions for data phases: Usage, Transport, and Rest.

--- a/#998.md
+++ b/#998.md
@@ -19,7 +19,12 @@ Teniendo en cuenta ambos triángulos, continuamos con las siguientes definicione
   - Algo que sabes: Como una contraseña o un PIN.
   - Algo que tienes: Como un teléfono móvil, un token de seguridad o una tarjeta inteligente.
   - Algo que eres: Información biométrica, como una huella digital o un escaneo facial.
+- Multi Step Authentication (MSA): Se refiere a un proceso aditivo donde completas pasos secuenciales, que a veces pueden usar el mismo factor de autenticación. Por ejemplo, ingresar una contraseña larga y luego responder una pregunta de seguridad (ambas son "algo que sabes").
 
+Para entender bien el estado de los datos, se conocen tres fases en las que pueden estar:
+- Uso: Los datos están en la fase de Uso/Proceso cuando están siendo accedidos, modificados o procesados activamente por un usuario o una aplicación.
+- Transporte: Los datos se encuentran en la fase de Transporte/Tránsito cuando se están moviendo a través de una red o entre diferentes ubicaciones o dispositivos.
+- Reposo: Los datos están en Reposo cuando se encuentran almacenados de forma inactiva en algún medio físico o digital. 
 
 
 
