Enhance #998.md with salt explanation
Added explanation about 'salt' in password hashing.

--- a/#998.md
+++ b/#998.md
@@ -26,8 +26,14 @@ Para entender bien el estado de los datos, se conocen tres fases en las que pued
 - Transporte: Los datos se encuentran en la fase de Transporte/Tránsito cuando se están moviendo a través de una red o entre diferentes ubicaciones o dispositivos.
 - Reposo: Los datos están en Reposo cuando se encuentran almacenados de forma inactiva en algún medio físico o digital. 
 
+Luego, continuamos con otra imagen, ya que, no alcanzó un pizzarron para la explicación de la clase.
+Nos encontramos primero con un término algo chistoso, el salt, quiere decir una cadena de caracteres aleatorios que se añade a una contraseña antes de aplicarle una función hash. Esto es crucial porque hace que dos usuarios con la misma contraseña tengan hashes completamente diferentes, protegiendo contra ataques de diccionario o tablas rainbow precalculadas.
 
 
+
+<p align="center">
+  <img src="Templates/SEG2.jpeg" width="550" alt="Mi imagen">
+</p>
 
 
 
