Enhance #998.md with security concepts
Added explanations for Non Repudiation, AAA framework, and PoC.

--- a/#998.md
+++ b/#998.md
@@ -28,14 +28,24 @@ Para entender bien el estado de los datos, se conocen tres fases en las que pued
 
 Luego, continuamos con otra imagen, ya que, no alcanzó un pizzarron para la explicación de la clase.
 Nos encontramos primero con un término algo chistoso, el salt, quiere decir una cadena de caracteres aleatorios que se añade a una contraseña antes de aplicarle una función hash. Esto es crucial porque hace que dos usuarios con la misma contraseña tengan hashes completamente diferentes, protegiendo contra ataques de diccionario o tablas rainbow precalculadas.
-
-
+El Non Repudiation es el principio de no repudio garantiza que una persona o entidad no pueda negar de manera plausible haber realizado una acción o enviado un mensaje en el mundo digital, es decir, que una persona no se puede salvar de algo que tienen comprobado.
 
 <p align="center">
   <img src="Templates/SEG2.jpeg" width="550" alt="Mi imagen">
 </p>
 
+Seguimos con la AAA, que no son un tipo de batería, es un marco de seguridad para controlar el acceso a la red y los recursos informáticos. Sus siglas significan:
+- Autenticación (Authentication): Verifica que el usuario o dispositivo es quien dice ser (ej. mediante contraseña, huella dactilar).
+- Autorización (Authorization): Una vez autenticado, determina qué privilegios o permisos tiene el usuario para acceder a recursos específicos.
+- Contabilidad (Accounting): Registra las acciones del usuario mientras está conectado (qué recursos usó, cuánto tiempo, etc.), creando un registro de auditoría para el análisis y cumplimiento.
 
+Por último, el Poc o Prueba de Concepto se refiere a la demostración de la viabilidad de una idea, método, o, a menudo, la explotación de una vulnerabilidad.
+
+Continuamos con la siguiente imagen:
+
+<p align="center">
+  <img src="Templates/SEG3.jpeg" width="550" alt="Mi imagen">
+</p>
 
 
 
