Update #998.md with OSI and TCP/IP discussion
Added content discussing the OSI and TCP/IP models.

--- a/#998.md
+++ b/#998.md
@@ -47,7 +47,7 @@ Continuamos con la siguiente imagen:
   <img src="Templates/SEG3.jpeg" width="550" alt="Mi imagen">
 </p>
 
-
+Se observa que repasamos el modelo OSI, pero nos enfocamos en el de TCP/IP, 
 
 
 
