Expand section on TCP/IP and cybersecurity techniques
Added detailed explanations of TCP/IP phases and cybersecurity concepts.

--- a/#998.md
+++ b/#998.md
@@ -47,7 +47,11 @@ Continuamos con la siguiente imagen:
   <img src="Templates/SEG3.jpeg" width="550" alt="Mi imagen">
 </p>
 
-Se observa que repasamos el modelo OSI, pero nos enfocamos en el de TCP/IP, 
+Se observa que repasamos el modelo OSI, pero nos enfocamos en el de TCP/IP, empazamos de abajo para arriba, en la fase de enlace de datos se encuentra la mac address, en la fase de red se encuentra la IP address, en la fase de transporte los puertos y en la de transportar se encuentran gmail, url, filesystem, ip phone, etc. Existe una norma en la que habilita o deniega participantes en alguna red, esto para evitar a los piratas informaticos, esa norma es la 802.1x. Igual existe un switch que tiene integrado un detector de la IP que se van conectando en la red, y si alguna se repite, es decir, una persona intenta suplantar la identidad de otra, este dispositivo los bloquea. Pero existen conceptos para entender mejor, estos son: 
+- El spoofing es una técnica de ciberdelincuencia basada en la suplantación de identidad, donde el atacante falsifica elementos como direcciones IP, remitentes de correo, números telefónicos o sitios web para parecer una fuente de confianza. Su objetivo es engañar a las víctimas para robar datos, instalar malware o realizar fraudes financieros.
+- El poisoning (envenenamiento de datos) en ingeniería, específicamente en el ámbito de Machine Learning (ML) e Inteligencia Artificial (IA), es un ciberataque donde un atacante manipula deliberadamente los datos de entrenamiento de un modelo para corromper su comportamiento.
+
+Por último, es bueno realizar un escaneo de puertos en nuestros dispositivos, asi tendremos una noción de que programas estan accediendo a nuestra máquina.
 
 
 
