Add Class 2 section with image
Added a new section for Class 2 with an image.

--- a/#998.md
+++ b/#998.md
@@ -41,6 +41,8 @@ Seguimos con la AAA, que no son un tipo de batería, es un marco de seguridad pa
 
 Por último, el Poc o Prueba de Concepto se refiere a la demostración de la viabilidad de una idea, método, o, a menudo, la explotación de una vulnerabilidad.
 
+## Clase 2 - 21/01/2026
+
 Continuamos con la siguiente imagen:
 
 <p align="center">
