Update #998.md with Class 3 and Class 4 details
Added content for Class 3 and Class 4 in the document.

--- a/#998.md
+++ b/#998.md
@@ -55,6 +55,26 @@ Se observa que repasamos el modelo OSI, pero nos enfocamos en el de TCP/IP, empa
 
 Por último, es bueno realizar un escaneo de puertos en nuestros dispositivos, asi tendremos una noción de que programas estan accediendo a nuestra máquina.
 
+## Clase 3 - 26/01/2026
+
+Se mostró en clase como poder ver las conexiones TCP que estan en nuestro dispositivo, teniendo como información el local address y los puertos.
+
+<p align="center">
+  <img src="Templates/SEG4.jpeg" width="550" alt="Mi imagen">
+</p>
+
+
+## Clase 4 - 28/01/2026
+
+
+
+
+
+
+
+
+
+
 
 
 
